[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logs-sdk"
version = "0.3.0"
description = "日志管理平台 Python SDK — FastAPI/Starlette/Flask 中间件，自动采集 HTTP 日志"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "uuid6>=2024"]

[project.optional-dependencies]
fastapi = ["fastapi", "starlette"]
flask = ["flask"]
