[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logs-sdk"
version = "0.3.2"
description = "日志管理平台 Python SDK — FastAPI/Starlette/Flask 中间件，自动采集 HTTP 日志"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27", "uuid6>=2024"]
authors = [{name = "xiaohao0725"}]
license = {text = "UNLICENSED"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/xiaohao0725/logs-sdk-python"
Repository = "https://github.com/xiaohao0725/logs-sdk-python"

[project.optional-dependencies]
fastapi = ["fastapi", "starlette"]
flask = ["flask"]
